<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartTouch Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_USB">Use USB</string>
    <string name="button_bluetooth">Use Bluetooth</string>
    <string name="title_activity_main">Welcome to SmartTouch Assistant!</string>
    <string name="title_activity_display_options">Select your input option</string>
    <string name="title_activity_macro">Enter your macros</string>
    <string name="title_activity_mouse">Use screen as touchpad</string>
    <string name="title_activity_macro_controller">Select your macros</string>
    <string name="confirm_selection">Confirm</string>
    <string name="shortcut_selection">Enter a shortcut</string>
    <string name="shortcut1">Use 1</string>
    <string name="shortcut2">Use 2</string>
    <string name="shortcut3">Use 3</string>
    <string name="shortcut4">Use 4</string>
    <string name="mouseOption">Mouse</string>
    <string name="macroOption">Macro Input</string>
    <string name="controllerOption">Controller</string>
    <string name="numpadOption">Numpad</string>
    <string name="multiMediaOption">Multimedia controller</string>
    <string name="fileExplorerOption">File Explorer</string>
    <string name="title_activity_controller">GamePad!</string>
    <string name="title_activity_multi_media">Change your multimedia controls</string>
    <string name="title_activity_numpad">Input numbers</string>
    <string name="tap1">1</string>
    <string name="tap2">2</string>
    <string name="tap3">3</string>
    <string name="tap4">4</string>
    <string name="tap5">5</string>
    <string name="tap6">6</string>
    <string name="tap7">7</string>
    <string name="tap8">8</string>
    <string name="tap9">9</string>
    <string name="tap0">0</string>
    <string name="tapDivide">/</string>
    <string name="tapMultiply">*</string>
    <string name="tapMinus">-</string>
    <string name="tapAdd">+</string>
    <string name="tapDot">.</string>    
    <string name="tapClear">CLR</string>
    <string name="tapEnter">Enter</string>
    <string name="tapNumlock">Num\nLock</string>   
    <string name="volumeUp">+</string>
    <string name="volumeDown">-</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play/Pause</string>
    <string name="forward">Forward</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_bluetooth_service">BluetoothService</string>
    <string name="title_activity_bluetooth_connection">Select your Bluetooth Device</string>
    <string name="startBluetooth">Use selected device</string>   
    <string name="bluetoothNotOn">Bluetooth not turned on &#8230; \nTurn on Bluetooth?</string>  

</resources>