<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:orientation="vertical" 
  	android:background="#090202">  
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="60dp"
  		android:orientation="horizontal" > 

   	 	<ImageButton android:id="@+id/rewind"
	        android:layout_weight="0.25"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:src="@drawable/rewind_icon"
            android:layout_marginLeft="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/rewind" />
        
        <ImageButton android:id="@+id/play"
	        android:layout_weight="0.25"
      		android:layout_width="0dp"
      		android:background="@drawable/button_selector"
      		android:src="@drawable/play_pause_icon"
      		android:layout_marginLeft="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/play" />
        
        <ImageButton android:id="@+id/stop"
	        android:layout_weight="0.25"
       		android:layout_width="0dp"
       		android:background="@drawable/button_selector"
       		android:src="@drawable/playback_stop_icon"
       		android:layout_marginLeft="3dip"
       		android:layout_marginRight="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/stop" />
        
        <ImageButton android:id="@+id/forward"
	        android:layout_weight="0.25"
       		android:layout_width="0dp"
       		android:background="@drawable/button_selector"
       		android:src="@drawable/fast_forward_icon"
       		android:layout_marginLeft="0dip"
       		android:layout_marginRight="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/forward" />
        
         
    </LinearLayout>  
    
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="60dp"
  		android:orientation="horizontal" 
  		android:layout_marginTop="3dip"> 

   	 	<ImageButton android:id="@+id/volumeDown"
	        android:layout_weight="0.5"
            android:layout_width="0dp"
            android:background="@drawable/button_selector"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="3dip"
            android:src="@drawable/vol_down_icon"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/volumeDown" />
        
        <ImageButton android:id="@+id/volumeUp"
	        android:layout_weight="0.5"
      		android:layout_width="0dp"
      		android:background="@drawable/button_selector"
      		android:src="@drawable/vol_up_icon"
      		android:layout_marginRight="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/volumeUp" />  
	        
         <ImageButton android:id="@+id/mute"
	        android:layout_weight="0.5"
      		android:layout_width="0dp"
      		android:background="@drawable/button_selector"
      		android:src="@drawable/sound_mute_icon"
      		android:layout_marginRight="3dip"
	        android:layout_height="match_parent"
	        android:onClick="inputCommand"
	        android:text="@string/mute" /> 

    </LinearLayout>  
        
</LinearLayout>