<GridLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"	    
	    android:layout_gravity="center"
	    android:rowCount="5"
	    android:columnCount="5"
	    android:orientation="horizontal"
	    android:useDefaultMargins="true"
	    android:background="#090202">

	<GridLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="4"
	    android:layout_gravity="center"
	    android:layout_row="4"
	    android:columnCount="4"
	    android:orientation="horizontal"
	    android:rowCount="5"
	    android:useDefaultMargins="true" >

	    <Button
	        android:id="@+id/tapNumlock"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_gravity="left|top"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="0"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapNumlock"
	        android:textSize="12sp" />

	    <Button
	        android:id="@+id/tapDivide"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="0"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapDivide" />

	    <Button
	        android:id="@+id/tapMultiply"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="0"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapMultiply" />

	    <Button
	        android:id="@+id/tapMinus"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="3"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="0"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapMinus" />

	    <Button
	        android:id="@+id/tap7"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="1"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap7" />

	    <Button
	        android:id="@+id/tap8"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="1"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap8" />

	    <Button
	        android:id="@+id/tap9"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="1"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap9" />

	    <Button
	        android:id="@+id/tapAdd"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="3"
	        android:layout_gravity="fill_vertical"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="1"
	        android:layout_rowSpan="2"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapAdd" />

	    <Button
	        android:id="@+id/tap4"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="2"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap4" />

	    <Button
	        android:id="@+id/tap5"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="2"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap5" />

	    <Button
	        android:id="@+id/tap6"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="2"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap6" />

	    <Button
	        android:id="@+id/tap1"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="3"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap1" />

	    <Button
	        android:id="@+id/tap2"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="1"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="3"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap2" />

	    <Button
	        android:id="@+id/tap3"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="3"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap3" />

	    <Button
	        android:id="@+id/tapEnter"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="3"
	        android:layout_gravity="fill_vertical"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="3"
	        android:layout_rowSpan="2"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapEnter" />

	    <Button
	        android:id="@+id/tap0"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="0"
	        android:layout_columnSpan="2"
	        android:layout_gravity="fill_horizontal"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="4"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tap0" />

	    <Button
	        android:id="@+id/tapDot"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_column="2"
	        android:layout_marginBottom="2dp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginRight="2dp"
	        android:layout_marginTop="2dp"
	        android:layout_row="4"
	        android:background="#787474"
	        android:onClick="inputNumber"
	        android:text="@string/tapDot" />
	</GridLayout>

</GridLayout>